# web-screpper

./: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
docs/: API.md  DEPLOYMENT.md  EXAMPLES.md
n8n_workflows/: README.md  daily_news_aggregator.json  webhook_trigger.json
scripts/: setup_supabase.py  test_scraping.py
src/: __init__.py  aggregator.py  config.py
src/api/: main.py
src/embeddings/: embeddings_service.py
src/pdf_generator/: __init__.py  pdf_service.py
src/scraper/: news_scraper.py
src/storage/: supabase_storage.py
tests/: conftest.py  test_embeddings.py  test_pdf_generator.py  test_scraper.py
