[project]
name = "web-scraper"
version = "1.0.0"
description = "Automated tech news aggregator with AI-powered deduplication"
authors = [{name = "ArturoAmador47"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.1",
    "uvicorn[standard]>=0.27.0",
    "crawl4ai>=0.8.0",
    "feedparser>=6.0.11",
    "openai>=1.12.0",
    "supabase>=2.3.4",
    "weasyprint>=60.2",
    "aiohttp>=3.13.3",
    "python-multipart>=0.0.18",
    "Pillow>=10.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
